--- a/integration-tests/dependency-on-stubs/build.gradle
+++ b/integration-tests/dependency-on-stubs/build.gradle
@@ -1,3 +1,7 @@
+plugins {
+    id "net.ltgt.errorprone" version "0.0.10"
+}
+
 apply plugin: RoboJavaModulePlugin
 
 // test with a project that depends on the stubs jar, not org.robolectric:android-all
